--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -3504,6 +3504,22 @@ Meant to be called after `vdiff-buffers' with its args."
 * Writing/Prose/Input
 There is also artbollocks, which highlight certain weasel words like "very" and can give a readability score, but it's not nearly as sophisticated as other software like languagetool. I'm currently using vale over write-good and proselint, but I haven't tried anything extensively. I need to try proselint more (flycheck has integration with by default). Some of the warnings/errors these packages give can be annoying.
 
+** General
+#+begin_src emacs-lisp
+(defun noct:insert-space ()
+  (interactive)
+  (insert " "))
+
+(defun noct:insert-sentence-end ()
+  (interactive)
+  (insert ".  "))
+
+(general-def 'insert text-mode-map
+  "SPC" (general-key-dispatch #'noct:insert-space
+          :timeout 0.2
+          "SPC" #'noct:insert-sentence-end))
+#+end_src
+
 ** Langtool
 Quite slow in larger buffers and not integrated with flycheck. Languagetool itself is a pretty impressive piece of software though with ~30k commits currently.
 #+begin_src emacs-lisp
