Add current .zshrc
Has been dirty forever; finally commit everything.

- Trim functions, aliases, and keybindings
  - Remove ... and ..<#> aliases (not needed with zsh autocd opt)
  - Remove all git aliases; have completely switched to magit
  - Remove tmux aliases (never used)
  - Remove ix pastebin function (do from Emacs)
  - Remove nix(os) and guix aliases
  - Remove guix keybindings (never committed)
  - Remove octopress aliases
  - Remove unused conky stuff
  - Remove xclip-copyfile aliases (never used; actual fm more efficient)
  - Remove youtube download aliases (using keybinding in browser instead)
  - Remove directory stack aliases; use fzf
  - Remove trash aliases (barely shorter than actual command name)
  - Remove Emacs aliases (just use sxhkd keybinding)
  - Remove chhost alias (don't need to change hostname regularly or at all)
  - Remove fh and fhe functions (just use C-r fzf keybinding)
  - Remove other unused aliases/functions

- Appearance changes
  - Remove prompt section now that using spaceship
  - Use line cursor in insert mode

- Stylistic changes
  - Consistently use org-style headings
  - Stop using "function"
  - Use consistent indenting
  - Don't use export for zsh plugin variables (subshells/other programs don't
    need to know about them)
  - Use local for all variables in functions

- Other Changes
  - Stop using correct_all; remove nocorrect from aliases
  - Stop using cdable vars (have fasd and anything more complicated should be
  done in a file manager)
  - Don't bind anything in viins (not using vi mode with Emacs vterm, and normal
  bindkey keybindings work in insert mode too)
  - Do profiling if NOCT_PROFILE_ZSH or NOCT_TIME_ZSH are set
  - Update e alias

Add new plugins
  - Add fzf-fasd plugin and configure enhancd tab completion (to use fzf)
  - Switch from zbell gist to zsh-auto-notify
  - Start using you-should-use plugin
  - Replace clipboard integration code with zsh-system-clipboard plugin

- Switch from zplug to zplugi

--- a/README.org
+++ b/README.org
@@ -148,7 +148,7 @@ Here I've organized my thoughts from trying from trying out and choosing various
 | universal package manager | nix                                                        |
 | emacs package manager     | package.el->straight.el                                    |
 | vim plugin manager        | neobundle->dein or vim-plug?                               |
-| shell plugin manager      | antigen->antigen-hs->zgen->zplug                           |
+| shell plugin manager      | antigen->antigen-hs->zgen->zplug->zplugin                  |
 | tmux plugin manager       | tpm                                                        |
 | boot loader               | GRUB->rEFInd                                               |
 | display manager           | none                                                       |
