mpv - Major updates
- Start using scripts
- Start using external shaders
- Remove obsolete cache settings (and don't replace; current defaults are fine)
- Add some extra subtitle settings
- Decrease OSD font for script menus
- Don't print to OSD for screenshots
- Add keys for mpv-repl, pasting to playlist, showing/navigating playlist,
  undoing seeks, opening menu to change youtube quality, reloading stuck stream,
  and selecting from recently played videos
- Install all scripts in post-install

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -4794,6 +4794,11 @@ TODO
 *** TODO HaRe
 *** TODO SHM
 *** TODO Hasktags
+** Lua
+#+begin_src emacs-lisp
+(use-package lua-mode)
+#+end_src
+
 ** Nix
 #+begin_src emacs-lisp
 (use-package nix-mode)
